--- a/templates/adminT.html.twig
+++ b/templates/adminT.html.twig
@@ -16,6 +16,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" sizes="76x76" href="{{asset('adminTe/assets/img/apple-icon.png')}}">
@@ -24,6 +25,11 @@
         Material Dashboard 2 by Creative Tim
     </title>
     <!--     Fonts and icons     -->
+
+        <!-- Bootstrap core CSS -->
+
+        <!-- Custom styles for this template -->
+
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
     <!-- Nucleo Icons -->
     <link href="{{asset('adminTe/assets/css/nucleo-icons.css')}}" rel="stylesheet" />
@@ -49,7 +55,7 @@
     <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link text-white active bg-gradient-primary" href="./pages/dashboard.html">
+                <a class="nav-link text-white active bg-gradient-primary" href="#">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="material-icons opacity-10">dashboard</i>
                     </div>
@@ -87,19 +93,19 @@
                             <div class="collapse" id="productsExample" style="">
                                 <ul class="nav nav-sm flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link text-white " href="new-product.html">
+                                        <a class="nav-link text-white " href="#">
                                             <span class="sidenav-mini-icon"> N </span>
                                             <span class="sidenav-normal  ms-2  ps-1"> New Product </span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-white " href="edit-product.html">
+                                        <a class="nav-link text-white " href="#">
                                             <span class="sidenav-mini-icon"> E </span>
                                             <span class="sidenav-normal  ms-2  ps-1"> Edit Product </span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-white " href="product-page.html">
+                                        <a class="nav-link text-white " href="#">
                                             <span class="sidenav-mini-icon"> P </span>
                                             <span class="sidenav-normal  ms-2  ps-1"> Product Page </span>
                                         </a>
@@ -125,7 +131,7 @@
                 <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white " href="./pages/profile.html">
+                <a class="nav-link text-white " href="#">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="material-icons opacity-10">person</i>
                     </div>
@@ -133,7 +139,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white " href="./pages/sign-in.html">
+                <a class="nav-link text-white " href="#">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="material-icons opacity-10">login</i>
                     </div>
@@ -141,7 +147,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white " href="./pages/sign-up.html">
+                <a class="nav-link text-white " href="#">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="material-icons opacity-10">assignment</i>
                     </div>
@@ -165,7 +171,7 @@
                     <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
                     <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Dashboard</li>
                 </ol>
-                <h6 class="font-weight-bolder mb-0">Dashboard</h6>
+
             </nav>
             <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
                 <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -273,6 +279,7 @@
         </div>
     </nav>
     <!-- End Navbar -->
+    {% block content %}
     <div class="container-fluid py-4">
         <div class="row">
             <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
@@ -784,6 +791,7 @@
             </div>
         </footer>
     </div>
+    {% endblock %}
 </main>
 <div class="fixed-plugin">
     <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
