--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% block content  %}
 {% block title %}Evenement{% endblock %}
 
 {% block body %}
@@ -27,4 +27,5 @@
     <a href="{{ path('evenement_edit', {'id': evenement.id}) }}">edit</a>
 
     {{ include('evenement/_delete_form.html.twig') }}
+{% endblock %}
 {% endblock %}
