--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,9 @@
 	          <li class="nav-item"><a href="{{path('formation_index')}}" class="nav-link">Formations</a></li>
 	          <li class="nav-item"><a href="{{path('evenement_index')}}" class="nav-link">Évènements</a></li>
 	          <li class="nav-item"><a href="{{path('contact')}}" class="nav-link">Contact</a></li>
-	          <li class="nav-item"><a href="{{path('login')}}" class="nav-link">Compte</a></li>
+				<li class="nav-item"><a href="{{path('commande_index')}}" class="nav-link">Commandes</a></li>
+
+				<li class="nav-item"><a href="{{path('login')}}" class="nav-link">Compte</a></li>
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
