--- a/templates/commande/show.html.twig
+++ b/templates/commande/show.html.twig
@@ -18,11 +18,11 @@
             </tr>
             <tr>
                 <th>Quantité</th>
-                <td>{{ commande.numero }}</td>
+                <td>{{ commande.Numc }}</td>
             </tr>
             <tr>
-                <th>Prix_total</th>
-                <td>{{ commande.prixTotal }}</td>
+                <th>Prix total</th>
+                <td>{{ commande.prix_total }}</td>
             </tr>
             </tbody>
         </table>
