--- a/templates/admin/users/ShowUtilistateur.html.twig
+++ b/templates/admin/users/ShowUtilistateur.html.twig
@@ -1,11 +1,11 @@
 {% extends 'admin.html.twig' %}
 
-{% block title %}Utilisateur{% endblock %}
+
 
 {% block content %}
     {% block body  %}
 
-        <div class="container" >
+        <div class="container" style="margin-top: 50px">
 
         <h1>Utilisateur</h1>
 
