--- a/templates/adminT.html.twig
+++ b/templates/adminT.html.twig
@@ -85,7 +85,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white " href="{{path('produit_newArtisan')}}">
+                <a class="nav-link text-white " href="#">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="material-icons opacity-10">receipt_long</i>
                     </div>
@@ -107,7 +107,7 @@
                             <div class="collapse" id="productsExample" style="">
                                 <ul class="nav nav-sm flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link text-white " href="{{path('produit_newArtisan')}}">
+                                        <a class="nav-link text-white " href="#">
                                             <span class="sidenav-mini-icon"> N </span>
                                             <span class="sidenav-normal  ms-2  ps-1"> New Product </span>
                                         </a>
@@ -125,7 +125,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-white active" href="{{path('produit_indexArtisan')}}">
+                                        <a class="nav-link text-white active" href="#">
                                             <span class="sidenav-mini-icon"> P </span>
                                             <span class="sidenav-normal  ms-2  ps-1"> Products List </span>
                                         </a>
