--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -247,7 +247,7 @@
                                 <a href="#" class="list-group-item">
                                     <div class="row g-0 align-items-center">
                                         <div class="col-2">
-                                            <img src="{{('adminT/img/avatars/avatar-5.jpg')}}" class="avatar img-fluid rounded-circle" alt="Ashley Briggs">
+                                            <img src="{{asset('adminT/img/avatars/avatar-5.jpg')}}" class="avatar img-fluid rounded-circle" alt="Ashley Briggs">
                                         </div>
                                         <div class="col-10 ps-2">
                                             <div class="text-dark">Ashley Briggs</div>
@@ -259,7 +259,7 @@
                                 <a href="#" class="list-group-item">
                                     <div class="row g-0 align-items-center">
                                         <div class="col-2">
-                                            <img src="{{('adminT/img/avatars/avatar-2.jpg')}}" class="avatar img-fluid rounded-circle" alt="Carl Jenkins">
+                                            <img src="{{asset('adminT/img/avatars/avatar-2.jpg')}}" class="avatar img-fluid rounded-circle" alt="Carl Jenkins">
                                         </div>
                                         <div class="col-10 ps-2">
                                             <div class="text-dark">Carl Jenkins</div>
@@ -271,7 +271,7 @@
                                 <a href="#" class="list-group-item">
                                     <div class="row g-0 align-items-center">
                                         <div class="col-2">
-                                            <img src="{{('adminT/img/avatars/avatar-4.jpg')}}" class="avatar img-fluid rounded-circle" alt="Stacie Hall">
+                                            <img src="{{asset('adminT/img/avatars/avatar-4.jpg')}}" class="avatar img-fluid rounded-circle" alt="Stacie Hall">
                                         </div>
                                         <div class="col-10 ps-2">
                                             <div class="text-dark">Stacie Hall</div>
@@ -283,7 +283,7 @@
                                 <a href="#" class="list-group-item">
                                     <div class="row g-0 align-items-center">
                                         <div class="col-2">
-                                            <img src="{{('adminT/img/avatars/avatar-3.jpg')}}" class="avatar img-fluid rounded-circle" alt="Bertha Martin">
+                                            <img src="{{asset('adminT/img/avatars/avatar-3.jpg')}}" class="avatar img-fluid rounded-circle" alt="Bertha Martin">
                                         </div>
                                         <div class="col-10 ps-2">
                                             <div class="text-dark">Bertha Martin</div>
@@ -364,23 +364,23 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-flag dropdown-toggle" href="#" id="languageDropdown" data-bs-toggle="dropdown">
-                            <img src="{{('adminT/img/flags/us.png')}}" alt="English" />
+                            <img src="{{asset('adminT/img/flags/us.png')}}" alt="English" />
                         </a>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown">
                             <a class="dropdown-item" href="#">
-                                <img src="{{('adminT/img/flags/us.png')}}" alt="English" width="20" class="align-middle me-1" />
+                                <img src="{{asset('adminT/img/flags/us.png')}}" alt="English" width="20" class="align-middle me-1" />
                                 <span class="align-middle">English</span>
                             </a>
                             <a class="dropdown-item" href="#">
-                                <img src="{{('adminT/img/flags/es.png')}}" alt="Spanish" width="20" class="align-middle me-1" />
+                                <img src="{{asset('adminT/img/flags/es.png')}}" alt="Spanish" width="20" class="align-middle me-1" />
                                 <span class="align-middle">Spanish</span>
                             </a>
                             <a class="dropdown-item" href="#">
-                                <img src="{{('adminT/img/flags/de.png')}}" alt="German" width="20" class="align-middle me-1" />
+                                <img src="{{asset('adminT/img/flags/de.png')}}" alt="German" width="20" class="align-middle me-1" />
                                 <span class="align-middle">German</span>
                             </a>
                             <a class="dropdown-item" href="#">
-                                <img src="{{('adminT/img/flags/nl.png')}}" alt="Dutch" width="20" class="align-middle me-1" />
+                                <img src="{{asset('adminT/img/flags/nl.png')}}" alt="Dutch" width="20" class="align-middle me-1" />
                                 <span class="align-middle">Dutch</span>
                             </a>
                         </div>
@@ -391,7 +391,14 @@
                         </a>
 
                         <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-                            <img src="{{('adminT/img/avatars/avatar.jpg')}}" class="avatar img-fluid rounded-circle me-1" /> <span class="text-dark">brahime</span>
+                            <img src="{{asset('adminT/img/avatars/avatar.jpg')}}" class="avatar img-fluid rounded-circle me-1" />
+
+                            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                <span class="text-dark">
+                                {{ app.user.nom }}
+                                    </span>
+                            {% endif %}
+
                         </a>
                         <div class="dropdown-menu dropdown-menu-end">
                             <a class="dropdown-item" href=""><i class="align-middle me-1" data-feather="user"></i> Profile</a>
@@ -399,7 +406,7 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="pages-settings.html">Settings & Privacy</a>
                             <a class="dropdown-item" href="#">Help</a>
-                            <a class="dropdown-item" href="#">Sign out</a>
+                            <a class="dropdown-item" href="{{path('app_logout')}}">Sign out</a>
                         </div>
                     </li>
                 </ul>
@@ -452,7 +459,7 @@
                                         </div>
                                     </div>
                                     <div class="col-6 align-self-end text-end">
-                                        <img src="{{('adminT/img/illustrations/customer-support.png')}}" alt="Customer Support" class="img-fluid illustration-img">
+                                        <img src="{{asset('adminT/img/illustrations/customer-support.png')}}" alt="Customer Support" class="img-fluid illustration-img">
                                     </div>
                                 </div>
                             </div>
