--- a/templates/admin/users/users.html.twig
+++ b/templates/admin/users/users.html.twig
@@ -211,7 +211,7 @@
                     <thead>
 
                     <tr>
-                        <th>Id</th>
+
                         <th>Nom </th>
                         <th>Prenom</th>
                         <th>Addresse</th>
@@ -222,11 +222,11 @@
                     <tbody>
                     {% for user in users %}
                         <tr>
-                            <td>{{ user.id }}</td>
+
                             <td>{{ user.nom }}</td>
                             <td>{{ user.prenom }}</td>
                             <td>{{ user.email }}</td>
-                            <td>{{ user.adresse }}</td>
+
                             <td>{% for role in user.roles %}
                                     {% if role == "ROLE_CLIENT" %}
                                         client
@@ -239,9 +239,14 @@
 
 
                             <td>
-                                <a href="{{ path('utilisateur_show', {'id': user.id}) }}" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
-                                <a href="{{ path('admin_modifier_utilisateur', {'id': user.id}) }}"" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                                <a href="{{ path('admin_supprimer_utilisateur', {'id': user.id}) }}" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                                <a href="{{ path('utilisateur_show', {'id': user.id}) }}" class="view" title="View" data-toggle="tooltip"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-eye align-middle me-2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></a>
+                            </td>
+                            <td>
+                                <a href="{{ path('admin_modifier_utilisateur', {'id': user.id}) }}"" class="edit" title="Edit" data-toggle="tooltip"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit align-middle me-2"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg></a>
+                            </td>
+                            <td>
+                                <a href="{{ path('admin_supprimer_utilisateur', {'id': user.id}) }}" class="delete" title="Delete" data-toggle="tooltip"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2 align-middle me-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg> </a>
+                            </td>
                             </td>
                         </tr>
 
@@ -259,4 +264,5 @@
 
 {% endblock %}
 {% endblock %}
+
 
