--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,18 +63,40 @@
                 <a class="dropdown-item" href="checkout.html">Checkout</a>
               </div>
             </li>
+
 				{% if is_granted('ROLE_CLIENT') %}
-				<li class="nav-item"><a href="{{ path('app_logout') }}" class="nav-link">Deconnexion</a></li>
+
 				{% else %}
 				<li class="nav-item  {% if mainNavLogin is defined %}active{% endif %}" ><a href="{{ path('app_login') }}" class="nav-link">Compte</a></li>
 
-					<li class="nav-item {% if mainNavRegistration is defined %}active{% endif %}">
+				{#<li class="nav-item {% if mainNavRegistration is defined %}active{% endif %}">
 						<a class="nav-link" href="{{path('app_register')}}">Inscription</a>
 					</li>
+				#}
 				{% endif %}
-	          <li class="nav-item cart"><a href="#" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li>
+				{% if is_granted('ROLE_CLIENT') %}
 
-	        </ul>
+				<li class="nav-item dropdown "  >
+					<a style="margin-top: 4px" class="  icon icon-user nav-link dropdown-toggle"      href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">  {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+
+                                {{ app.user.nom }}
+
+						{% endif %}</a>
+
+
+					<div class="dropdown-menu" aria-labelledby="dropdown04">
+						<a class="dropdown-item" href="#">Profile</a>
+
+
+						<a class="dropdown-item" href="{{ path('app_logout') }}" >Deconnexion</a>
+					</div>
+				</li>
+				{% endif %}
+
+				<li class="nav-item cart"><a  class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li>
+
+			</ul>
+
 	      </div>
 		  </div>
 	  </nav>
