--- a/templates/commentaire/index.html.twig
+++ b/templates/commentaire/index.html.twig
@@ -1,9 +1,10 @@
 {% extends 'admin.html.twig' %}
 
-{% block title %}Commentaire index{% endblock %}
+{% block title %}{% endblock %}
 
 {% block content %}
 {% block body %}
+    <div class="container" style="margin-top: 50px">
     <h1>Commentaire index</h1>
 
     <table class="table">
@@ -35,7 +36,7 @@
         {% endfor %}
         </tbody>
     </table>
-
+    </div>
     <a href="{{ path('commentaire_new') }}">Create new</a>
 {% endblock %}
 {% endblock %}
