--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -1,27 +1,12 @@
-{% extends 'admin.html.twig' %}
+{% extends 'adminT.html.twig' %}
 
-{% block css %}
-{% endblock %}
+{% block title %}New Produit{% endblock %}
 {% block content %}
+{% block body %}
+    <h1>Create new Produit</h1>
 
-    {% block body %}
-<div class="container-xl">
-        {% block title %}New Produit{% endblock %}
-</div>
-        <div class="container-fluid">
+    {{ include('produit/_form.html.twig') }}
 
-        <div class="container-xl">
-
-
-            {{ form_start(form,{'attr':{'novalidate':'novalidate'}}) }}
-            <div class="form-group">{{ form_row(form.nom,{'attr':{'class':'form-control'}})}}</div>
-            <div class="form-group">{{ form_row(form.description,{'attr':{'class':'form-control'}})}}</div>
-            <div class="form-group">{{ form_row(form.prix,{'attr':{'class':'form-control'}})}}</div>
-            <button class="btn btn-info m-4" type="submit">Ajouter</button>
-            <div >{{ form_rest(form) }}</div>
-            {{ form_end(form) }}
-        </div>
-        </div>
-    {% endblock %}
+    <a href="{{ path('produit_index') }}">back to list</a>
 {% endblock %}
-
+{% endblock %}
