--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -1,28 +1,32 @@
 {% extends 'adminT.html.twig' %}
 
 {% block title %}Produit{% endblock %}
-
+{% block content %}
 {% block body %}
     <h1>Produit</h1>
 
     <table class="table">
         <tbody>
-        <tr>
-            <th>Id</th>
-            <td>{{ produit.id }}</td>
-        </tr>
-        <tr>
-            <th>Nom</th>
-            <td>{{ produit.nom }}</td>
-        </tr>
-        <tr>
-            <th>Description</th>
-            <td>{{ produit.description }}</td>
-        </tr>
-        <tr>
-            <th>Prix</th>
-            <td>{{ produit.prix }}</td>
-        </tr>
+            <tr>
+                <th>Id</th>
+                <td>{{ produit.id }}</td>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <td>{{ produit.name }}</td>
+            </tr>
+            <tr>
+                <th>Price</th>
+                <td>{{ produit.price }}</td>
+            </tr>
+            <tr>
+                <th>Description</th>
+                <td>{{ produit.description }}</td>
+            </tr>
+             <tr>
+                <th>File</th>
+                <td><img class="img-responsive" src="{{ asset('uploads/peintures/') ~ produit.file}}" width="200" height="200"></td>
+            </tr>
         </tbody>
     </table>
 
@@ -31,4 +35,5 @@
     <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
 
     {{ include('produit/_delete_form.html.twig') }}
+{% endblock %}
 {% endblock %}
