--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -77,7 +77,7 @@
                 <div class="control__indicator"></div>
             </label>
             <a  href="{{ path('app_register') }} " class="forgot-pass">register</a>
-            <span class="ml-auto"><a href="#" class="forgot-pass">Forgot Password</a></span>
+            <span class="ml-auto"><a href="{{path('app_forgot_password_request')}}" class="forgot-pass">Forgot Password</a></span>
 
         </div>
 
