--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -89,26 +89,6 @@
                 </li>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <li class="sidebar-item active">
 						<a class="sidebar-link" href="{{ path('admin_utilisateurs') }}">
              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users align-middle"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg> <span class="align-middle">Users</span>
@@ -121,16 +101,13 @@
                         <i class="align-middle" data-feather="pie-chart"></i> <span class="align-middle">Commentaire</span>
                         <span class="badge badge-sidebar-primary">New</span>
                     </a>
-                  
-        
 
-
-
-
-
-
-
-
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" href="{{ path('admincommande_index') }}">
+                        <i class="align-middle" data-feather="pie-chart"></i> <span class="align-middle">Commandes</span>
+                        <span class="badge badge-sidebar-primary">New</span>
+                    </a>
 
                 </li>
                 <li class="sidebar-item">
