gestion_formation_jawha_behy

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 
     <link rel="stylesheet" href="{{asset('css/open-iconic-bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{asset('css/open-iconic-bootstrap.min.css')}}">
     <link rel="stylesheet" href="{{asset('css/animate.css')}}">
 
     <link rel="stylesheet" href="{{asset('css/owl.carousel.min.css')}}">
@@ -37,13 +38,14 @@
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">Sanaaty<small>Art</small></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Formations
+	        <span class="oi oi-menu"></span> MENU
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 		  
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="{{path('home')}}" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="{{path('formation_index')}}" class="nav-link">Formations</a></li>
+				<li class="nav-item"><a href="{{path('publicite')}}" class="nav-link">Publicité</a></li>
 	          <li class="nav-item"><a href="{{path('evenement_index')}}" class="nav-link">Évènements</a></li>
 	          <li class="nav-item"><a href="{{path('contact')}}" class="nav-link">Contact</a></li>
 	          <li class="nav-item"><a href="{{path('login')}}" class="nav-link">Compte</a></li>
