--- a/templates/registration/afterRegister.html.twig
+++ b/templates/registration/afterRegister.html.twig
@@ -1,3 +1,6 @@
+{% extends 'base.html.twig' %}
+{% block content %}
+    {% block body %}
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
@@ -6,7 +9,8 @@
     body {
         text-align: center;
         padding: 40px 0;
-        background: #EBF0F5;
+    {#background: #EBF0F5;  #}
+        margin-top: 60px;
     }
     h1 {
         color: #88B04B;
@@ -14,6 +18,9 @@
         font-weight: 900;
         font-size: 40px;
         margin-bottom: 10px;
+    }
+    a{
+        color: #88B04B;
     }
     p {
         color: #404F5E;
@@ -47,3 +54,5 @@
 </div>
 </body>
 </html>
+{% endblock %}
+{% endblock %}
