--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -80,7 +80,7 @@
                         <span class="badge badge-sidebar-primary">5</span>
                     </a>
                     <ul id="dashboards" class="sidebar-dropdown list-unstyled collapse show" data-bs-parent="#sidebar">
-                        <li class="sidebar-item active"><a class="sidebar-link" href="dashboard-default.html">Default</a></li>
+                        <li class="sidebar-item active"><a class="sidebar-link" href="{{path('reponse_reclamation_index')}}">Reclamation</a></li>
                         <li class="sidebar-item"><a class="sidebar-link" href="dashboard-analytics.html">Analytics</a></li>
                         <li class="sidebar-item"><a class="sidebar-link" href="dashboard-saas.html">SaaS</a></li>
                         <li class="sidebar-item"><a class="sidebar-link" href="dashboard-social.html">Social</a></li>
