--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,6 +45,7 @@
 	          <li class="nav-item active"><a href="{{path('home')}}" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="{{path('formation_index')}}" class="nav-link">Formations</a></li>
 	          <li class="nav-item"><a href="{{path('evenement_index')}}" class="nav-link">Évènements</a></li>
+				<li class="nav-item"><a href="{{path('reclamation_index')}}" class="nav-link">Reclamation</a></li>
 	          <li class="nav-item"><a href="{{path('contact')}}" class="nav-link">Contact</a></li>
 	          <li class="nav-item"><a href="{{path('login')}}" class="nav-link">Compte</a></li>
 	          <li class="nav-item dropdown">
