--- a/templates/publicite/index.html.twig
+++ b/templates/publicite/index.html.twig
@@ -96,6 +96,10 @@
 </form-->
 <div style="margin-top: 150px">
     <div style="margin-top: 150px">
+        <div style="margin-left: 50px" class="heading-section ftco-animate ">
+            <span class="subheading">Consulter</span>
+            <h2 class="mb-4">Les Publicités</h2>
+        </div>
         <table class="table">
             <thead>
             <tr>
