--- a/templates/formation/_delete_form.html.twig
+++ b/templates/formation/_delete_form.html.twig
@@ -1,4 +1,5 @@
 <form method="post" action="{{ path('formation_delete', {'id': formation.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ formation.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-dark">Delete</button>
 </form>
+
