--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -68,6 +68,14 @@
 
 <div style="margin-top: 150px">
 <div style="margin-top: 150px">
+
+
+    <div style="margin-left: 50px" class="heading-section ftco-animate ">
+        <span class="subheading">Consulter</span>
+        <h2 class="mb-4">Les Formations</h2>
+    </div>
+    <div>
+
     <table class="table">
         <thead>
         <tr>
