--- a/templates/formation/show.html.twig
+++ b/templates/formation/show.html.twig
@@ -91,9 +91,9 @@
         </tbody>
     </table>
     </div>
-    <a href="{{ path('formation_index') }}">back to list</a>
+<button class="btn btn-outline-dark"> <a href="{{ path('formation_index') }}">back to list</a> <button/>
 
-    <a href="{{ path('formation_edit', {'id': formation.id}) }}">edit</a>
+<button class="btn btn-outline-dark"><a href="{{ path('formation_edit', {'id': formation.id}) }}">edit</a> <button/>
 
     {{ include('formation/_delete_form.html.twig') }}
 
